# sage

./: .gitignore  BUSINESS_CASE.md  README.md  ssr_demo.ipynb
backend/: .gitignore  README.md  ground_truth_metrics.py  main.py  pyproject.toml  requirements.txt
backend/ssr_core/: __init__.py  demographics.py  llm_client.py  model_validator.py  ssr_model.py  survey.py
config/: image_comparison_test.yaml  multi_category_example.yaml  single_category_example.yaml
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ArchitectureDiagram.tsx  ConfusionMatrix.tsx  DistributionCharts.tsx  SystemWorkflowDiagram.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/SurveyBuilder/: CategoryEditor.tsx  PersonaGroupEditor.tsx  QuestionEditor.tsx  SurveyForm.tsx  YAMLPreview.tsx
frontend/src/components/SurveyPreview/: CategoryList.tsx  PersonaGroupList.tsx  QuestionList.tsx  SurveyDetails.tsx
frontend/src/components/SurveyRunner/: ResponseDataset.tsx  RunConfigPanel.tsx  RunProgress.tsx
frontend/src/pages/: GroundTruthTestingPage.tsx  GroundTruthTestingPage.tsx.bak  GroundTruthTestingPage.tsx.bak2  GroundTruthTestingPage.tsx.bak3  HomePage.tsx  SurveyBuilderPage.tsx  SurveyHistoryPage.tsx  SurveyPreviewPage.tsx  SurveyRunDetailPage.tsx  SurveyRunnerPage.tsx  SurveyUserViewPage.tsx  SystemOverviewPage.tsx
frontend/src/services/: api.ts  hooks.ts  types.ts
