[project]
name = "ssr-pipeline-demo-backend"
version = "1.0.0"
description = "FastAPI backend for SSR Pipeline Demo Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "openai==1.10.0",
    "anthropic==0.8.1",
    "python-dotenv==1.0.0",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
